...
      <ThemeProvider value={colorScheme === "dark" ? DarkTheme : DefaultTheme}>
        <Stack>
          <Stack.Screen name="(tabs)" options={{ headerShown: false }} />
          <Stack.Screen
            name="checkout"
            options={{
              title: "Checkout",
              headerBackTitle: "Home",
            }}
          />
          <Stack.Screen
            name="order-confirmation"
            options={{
              title: "Order Confirmation",
...
